fixed weapon-slots to align properly

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,9 +20,16 @@ html, body {
     float: left;
 }
 
-#weapon-slots {
-    padding: 2px;
+.weapon-slots {
+    padding: 5px;
     border: 1px solid darkgreen;
     background-color: rgb(54, 53, 53);
     color: rgb(0, 189, 0);
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
